# Smart-Intermediate-Representation

./: .gitignore  Dockerfile  MAINTAINERS  README.md  package.json
.github/: CLA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  general-question.md
.github/workflows/: cla.yml  release.yml  smartir_builder_docker_release.yml  smartir_test.yml
ai_intent/: README.md
ai_intent/example/: script.sh
doc/: Contributing Guide.md  Development_Duide.md  Development_Guide.md
doc/specification/: SmartIR.md
docker/ir-cli/: Dockerfile
docker/ir-cli-builder/: Dockerfile  README.md  cargo_config  docker_build.sh
ir_cli/: Cargo.toml  README.md  build.rs  makefile
ir_cli/src/: lib.rs
ir_cli/src/abi/: mod.rs
ir_cli/src/tests/: mod.rs
ir_cli/src/tests/e2e/: as.rs  assign.rs  bigint.rs  break.rs  builtin.rs  calculation.rs  call.rs  continue.rs  declaration.rs  for.rs  func.rs  if.rs  json.rs  map.rs  match.rs  math.rs  mod.rs  parampack.rs  select.rs  ssz.rs  str.rs  vec.rs
ir_cli/src/tests/examples/: mod.rs
ir_cli/src/vm/: context.rs  mod.rs
ir_example/: hello_world.ir
lib/: README.md
smart_ir/: Cargo.toml  build.rs  makefile  run_cclib_tests.sh
smart_ir/src/: lib.rs
smart_ir/src/abi/: mod.rs  params.rs
smart_ir/src/encoding/: mod.rs
smart_ir/src/encoding/datastream/: mod.rs
smart_ir/src/encoding/ssz/: mod.rs
smart_ir/src/integration/: hostapi.rs  intrinsic.rs  mod.rs
smart_ir/src/ir/: builder.rs  cfg.rs  context.rs  interface_type.rs  intrinsic_func.rs  mod.rs  pass_manager.rs  printer.rs
smart_ir/src/ir/frontend/: ir.lalrpop  mod.rs  parser.rs  translate.rs  unescape.rs
smart_ir/src/ir/metadata/: asset.rs  debug_info.rs  extend_hostapi.rs  mod.rs  ssz_info.rs  storage_path_extra_args.rs
smart_ir/src/ir_codegen/: abi.rs  builtin_constants.rs  class_generator.rs  const_storage_path_generator.rs  context.rs  encoding.rs  error.rs  ir.rs  mod.rs  storage_path.rs  ty.rs  val.rs
smart_ir/src/ir_codegen/common/: global.rs  mod.rs
smart_ir/src/ir_codegen/intrinsic/: builtin.rs  map.rs  math.rs  mod.rs  mycov.rs  storage.rs  vector.rs
smart_ir/src/ir_codegen/traits/: backends.rs  builder.rs  intrinsic.rs  mod.rs  ty.rs  value.rs
smart_ir/src/ir_config/: mod.rs
smart_ir/src/linker/: linker.cpp  mod.rs  util.rs  wasm.rs
smart_ir/src/runtime/: mod.rs
smart_ir/src/runtime/stdlib/: base64.c  base64.h  cJSON.c  cJSON.h  call_log.c  call_log.h  chain.c  chain.h  data_stream.c  data_stream.h  data_stream_builtin.c  data_stream_builtin.h  hex.c  hex.h  ir_type.c  ir_type.h  json.c  json.h  makefile  math.c  math.h  mycov.c  mycov.h  mycrypto.c  mycrypto.h  qhash.c  qhash.h  qhashtbl.c  qhashtbl.h  qinternal.h  qstring.c  qstring.h  qvector.c  qvector.h  rlp.c  rlp.h  ssz.c  ssz.h  stdlib.c  stdlib.h  (+6 more)
smart_ir/src/runtime/stdlib/internal/base64/: base64.c  base64.h
smart_ir/src/runtime/stdlib/internal/hex/: hex.c  hex.h
smart_ir/src/runtime/stdlib/qlibc/: LICENSE
smart_ir/src/runtime/stdlib/test/: .gitignore  CMakeLists.txt  base64_test.cc  hex_test.cc  ir_c_mock.cc  ir_type_test.cc  math_test.cc  qhashtbl_test.cc  qstring_test.cc  qvector_test.cc  rlp_test.cc  run_test.sh  storage_t_test.cc  test.cc  test.h  test_main.cc
smart_ir/src/runtime/stdlib/test/ssz-c/: ssz.hh  ssz_account_test.cc  ssz_contract_artifact_test.cc  ssz_contract_test.cc  ssz_test.cc
smart_ir/src/runtime/stdlib/wasm/: .gitignore
smart_ir/src/runtime/vm/: mod.rs
smart_ir/src/tools/: leb128.rs  mod.rs
smart_ir_macro/: Cargo.toml
smart_ir_macro/src/: lib.rs
tensor/: Cargo.toml  data.json  erc20.ir  tensor_test.py
tensor/src/: cfg.rs  instr.rs  lib.rs  main.rs  sol2tensor.rs  tensor.rs
yul_to_ir/: Cargo.toml  README.md  build.rs
yul_to_ir/src/: ast.rs  context.rs  instruction.rs  lib.rs  test.rs  transform.rs  yul.lalrpop
yul_to_ir/src/tests/: mod.rs
yul_to_ir/src/tests/solang_parser_test/: mod.rs
yul_to_ir/src/tests/yul_tests/: mod.rs  test.rs
