[package]
name = "ir_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.9"
cc = "1.0"

[dependencies]
wasmi = "0.11"
parity-wasm = "0.42.2"
anyhow = "1.0.75"
clap = "2.34.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
rustc-serialize = "0.3.24"
bstr = "1.7.0"
lalrpop = "0.19.9"
lalrpop-util = "0.19.9"
rust-crypto = "^0.2"
rsa = "0.3.0"
keccak-hash = "0.10.0"
libsecp256k1 = "0.7.1"
libc = { version = "0.2.121" }
nano-leb128 = "0.1.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = { version = "1.0" }
inkwell = { git = "https://github.com/TheDan64/inkwell", features = [
    "target-webassembly",
    "llvm15-0-force-static",
] }
smart_ir_macro = { path = "../smart_ir_macro", version = "0.3.0" }
smart_ir = { path = "../smart_ir" }
compiler_base_span = "0.0.1"
chrono = "0.4.26"
log = "0.4.14"

[[bin]]
name = "ir_cli"
path = "src/bin/main.rs"
