[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart_ir = { path = "../smart_ir" }
yul_to_ir = { path = "../yul_to_ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"